[GTK]Popup drop-down menu contains extra empty spaces at beginning and occupies whole screen when items in popup reaches the height of display device. https://bugs.webkit.org/show_bug.cgi?id=68533

When implementing the GTK+ menu position function, set pushIn to false, which tell
GTK+ not create a menu that is as big as the entire screen.

Patch by Wajahat Siddiqui <mdwajahatali.siddiqui@motorola.com> on 2011-09-22
Reviewed by Martin Robinson.

* platform/gtk/GtkPopupMenu.cpp:
(WebCore::GtkPopupMenu::menuPositionFunction): Set pushIn to false in the menu position function.

Canonical link: https://commits.webkit.org/84564@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95720 268f45cc-cd09-0410-ab3c-d52691b4dbfc